--- a/welcome.html
+++ b/welcome.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Question Game</title>
+	<link rel="icon" type="image/ico" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQB5fJCC1MrfiRdz_e0ZlnbDTs3NXSatLj5q9oES8qfUnDX59JvSLX7rF9djhpXMRt0Gq0&usqp=CAU"></link>
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/game.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
