--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>GameZone</title>
+	<link rel="shortcut icon" type="image/jpg" href="images/logo2.png"/>
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/game.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
